@@ -29,6 +29,8 @@ backend-django/clarin_backend/static/
 backend-django/static/
 backend-django/clarin_backend/templates/index.html
 backend-django/apache_venv/
+backend-django/nlp/__pycache__/
+backend-django/nlp/migrations/__pycache__/
 backend/pass.txt
 clarin-angular/package-lock.json
 docker/conf/env
